_sass/_pages.scss
  
//
// Pages
//

.page-title {
  @include mobile{
    text-align: center;
  }
}

.page-options {
  h5 {
    font-size: 20px;
    color: $gray;
  }

  @include mobile {
    text-align: center;
  }
}

.safe-email {
  i {
    font-family: $defaultSansSerif;
    font-style: normal;
    //letter-spacing: -0.10em;
    border-color: transparent;
    border-radius: 2px;
    background-color: $lightGray;
    margin: 1px;
    padding: 2px;
  }
}

.line-separator {
  height: 1px;
  //background: $darkGray;
  border-bottom: 1px solid $lightGray;
}

.corner-btn {
  position: fixed;
  background: $white;
  border: 1px solid $lightGray;
  border-radius: 5px;
  padding: 3px 9px 3px 9px;
  
  a {
    font-size: 14px;
    font-family: $defaultSansSerif;
    //text-transform: uppercase;
    color: $gray;
  }
}

.share-corner {
  bottom: 2%;
  right: 6%;

  @include mobile {
    right: 16%;
  }
}

.back-to-top {
  bottom: 2%;
  right: 2%;

  @include mobile {
    right: 4%;
  }
}

